--- a/pom.xml
+++ b/pom.xml
@@ -307,8 +307,11 @@
             <version>2.8.9</version>
         </dependency>
 
-
-        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.jaxrs/jackson-jaxrs-json-provider -->
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>5.4.2</version>
+         </dependency>
 
     </dependencies>
 
