--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
       <dependency>
         <groupId>dk.kb.license</groupId>
         <artifactId>ds-license</artifactId>
-          <version>1.5.3-SNAPSHOT</version>
+          <version>1.5.3</version>
           <type>jar</type>
           <classifier>classes</classifier>
           <exclusions>
@@ -90,7 +90,7 @@
       <dependency>
             <groupId>dk.kb.present</groupId>
             <artifactId>ds-present</artifactId>
-            <version>2.2.7-SNAPSHOT</version>
+            <version>2.2,7</version>
             <type>jar</type>
             <classifier>classes</classifier>
             <exclusions>
