--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <name>ds-discover</name> <!-- Human readable name, uppercase and spaces welcome -->
     <groupId>dk.kb.discover</groupId>
     <artifactId>ds-discover</artifactId>
-    <version>1.5.3</version>
+    <version>1.5.4-SNAPSHOT</version>
     
     <packaging>war</packaging>
     <description>ds-discover by the Royal Danish Library</description>
@@ -33,7 +33,7 @@
         <url>https://github.com/kb-dk/ds-discover</url>
         <connection>scm:git:git@github.com:kb-dk/ds-discover.git</connection>
         <developerConnection>scm:git:git@github.com:kb-dk/ds-discover.git</developerConnection>
-        <tag>ds-discover-1.5.3</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <licenses>
