changelog updated with SolrShield bug:
https://kb-dk.atlassian.net/browse/DRA-1788

--- a/conf/ds-discover-behaviour.yaml
+++ b/conf/ds-discover-behaviour.yaml
@@ -56,7 +56,8 @@ solr:
   shield:
     # Whether SolrShield is enabled.
     # If false, SolrShield evaluation is still performed but the response is only logged.
-    enabled: true
+    # IS only set to false because of: https://kb-dk.atlassian.net/browse/DRA-1788
+    enabled: false
 
     # Current max weight is very likely to be too low for practical use.
     # More experimenting with SolrShield is needed in order to determine a proper max weight
