--- a/pom.xml
+++ b/pom.xml
@@ -4,30 +4,16 @@
     <parent>
         <groupId>dk.kb.dsparent</groupId>
         <artifactId>ds-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
 
     <name>ds-discover</name> <!-- Human readable name, uppercase and spaces welcome -->
     <groupId>dk.kb.discover</groupId>
     <artifactId>ds-discover</artifactId>
-    <version>${ds.version}</version>
+    <version>${project.parent.version}</version>
 
     <packaging>war</packaging>
     <description>ds-discover by the Royal Danish Library</description>
-
-    <repositories>
-        <repository>
-            <id>sbforge-nexus</id>
-            <url>https://sbforge.org/nexus/content/groups/public</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-               
-    </repositories>
 
     <scm>
         <url>https://github.com/kb-dk/ds-discover</url>
@@ -45,10 +31,6 @@
     </licenses>
 
     <properties>
-        <!-- Specify java version here, to support forbiddenapis plugin -->
-        <!-- If the version is changed from 17 to something else, Jenkinsfile must also be updated -->
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
         <!-- Enable forbiddenapis plugin, do disable set to none -->
         <api.check.phase>process-test-classes</api.check.phase>
         <!--Specify the licenses here, so they can be picked up by openAPI-->
@@ -73,7 +55,7 @@
         <dependency>
             <groupId>dk.kb.license</groupId>
             <artifactId>ds-license</artifactId>
-            <version>${ds.version}</version>
+            <version>${project.parent.version}</version>
             <type>jar</type>
             <classifier>classes</classifier>
             <exclusions>
@@ -87,7 +69,7 @@
         <dependency>
             <groupId>dk.kb.present</groupId>
             <artifactId>ds-present</artifactId>
-            <version>${ds.version}</version>
+            <version>${project.parent.version}</version>
             <type>jar</type>
             <classifier>classes</classifier>
             <exclusions>
@@ -247,7 +229,6 @@
         <dependency>
             <groupId>org.apache.httpcomponents.client5</groupId>
             <artifactId>httpclient5</artifactId>
-            <version>5.4.2</version>
          </dependency>
 
     </dependencies>
