--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,18 @@
         <version>3.0.1-SNAPSHOT</version>
     </parent>
 
-    <name>ds-discover</name> <!-- Human readable name, uppercase and spaces welcome -->
+    <name>ds-discover-parent</name> <!-- Human readable name, uppercase and spaces welcome -->
     <groupId>dk.kb.discover</groupId>
-    <artifactId>ds-discover</artifactId>
+    <artifactId>ds-discover-parent</artifactId>
     <version>3.0.1-SNAPSHOT</version>
 
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
     <description>ds-discover by the Royal Danish Library</description>
+
+    <modules>
+        <module>ds-discover-api</module>
+        <module>ds-discover-web</module>
+    </modules>
 
     <scm>
         <url>https://github.com/kb-dk/ds-discover</url>
@@ -51,51 +56,11 @@
             <groupId>dk.kb.util</groupId>
             <artifactId>kb-util</artifactId>
         </dependency>
+
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
         </dependency>
-
-        <!-- Client for ds-license. This will also require the org.openapitools dependency-->
-        <dependency>
-            <groupId>dk.kb.license</groupId>
-            <artifactId>ds-license</artifactId>
-            <version>3.0.1-SNAPSHOT</version>
-            <type>jar</type>
-            <classifier>classes</classifier>
-            <exclusions>
-                <exclusion>
-                    <groupId>*</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>dk.kb.present</groupId>
-            <artifactId>ds-present</artifactId>
-            <version>3.0.1-SNAPSHOT</version>
-            <type>jar</type>
-            <classifier>classes</classifier>
-            <exclusions>
-                <exclusion>
-                    <groupId>dk.kb.storage</groupId>
-                    <artifactId>ds-storage</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.github.ben-manes.caffeine</groupId>
-                    <artifactId>caffeine</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.poi</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.solr</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
-       </dependency>
 
         <!-- Apache CXF and servlet stuff -->
         <dependency>
@@ -166,15 +131,6 @@
             <groupId>io.swagger</groupId>
             <artifactId>swagger-jaxrs</artifactId>
         </dependency>
-        <!-- To get date parsing to work? -->
-        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.module/jackson-modules-java8 -->
-        <!--        <dependency>
-                    <groupId>com.fasterxml.jackson.module</groupId>
-                    <artifactId>jackson-modules-java8</artifactId>
-                    <version>2.13.1</version>
-                    <type>pom</type>
-                    <scope>runtime</scope>
-                </dependency>-->
 
         <dependency>
             <groupId>org.keycloak</groupId>
@@ -250,19 +206,7 @@
     </dependencies>
 
     <build>
-        <resources>
-            <resource>
-                <directory>src/main/openapi</directory>
-                <filtering>true</filtering>
-            </resource>
-            <!-- Needed as specifying <resources> overrides all previous definitions -->
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
         <plugins>
-
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>3.3.1</version>
@@ -296,198 +240,6 @@
                 </executions>
             </plugin>
 
-            <plugin>
-                <groupId>org.openapitools</groupId>
-                <artifactId>openapi-generator-maven-plugin</artifactId>
-                <version>4.3.1</version>
-                <!-- Running this gives
-                     [WARNING] The value (generator's option) must be either boolean or string. Default to `false`.
-                     which seems to be an unresolved issue: https://github.com/OpenAPITools/openapi-generator/issues/9008 -->
-                <configuration>
-                    <!-- https://openapi-generator.tech/docs/generators/java/ -->
-
-                    <generatorName>jaxrs-cxf-extended</generatorName>
-                    <inputSpec>${project.build.outputDirectory}/openapi.yaml</inputSpec><!-- Will always be overridden -->
-                    <modelNameSuffix>Dto</modelNameSuffix>
-                    <generateSupportingFiles>false</generateSupportingFiles>
-                    <generateApiTests>false</generateApiTests>
-                    <generateModelDocumentation>true</generateModelDocumentation>
-                    <generateApis>true</generateApis>
-                    <output>${project.basedir}</output>
-                    <templateDirectory>src/main/templates/</templateDirectory>
-                    <configOptions>
-                        <withXml>true</withXml>  <!-- Needed for XML serialization support in the Model -->
-                        <!--https://openapi-generator.tech/docs/generators/jaxrs-cxf-extended/-->
-                        <sourceFolder>target/generated-sources</sourceFolder>
-                        <useSwaggerFeature>true</useSwaggerFeature>
-                        <useSwaggerUI>true</useSwaggerUI>
-                        <apiPackage>${project.package}.api</apiPackage>
-                        <modelPackage>${project.package}.model</modelPackage>
-                        <!--<dateLibrary>threetenbp</dateLibrary>-->
-                        <!--<dateLibrary>Java11</dateLibrary>-->
-                        <implFolder>src/main/java</implFolder>
-                        <invokerPackage>${project.package}</invokerPackage>
-                    </configOptions>
-                    <packageName>${project.package}</packageName>
-                </configuration>
-
-
-
-
-                <executions>
-
-
-
-                    <!-- Version 1 -->
-                    <!-- When a new version is needed, make a copy of three v1-related executions below, then change
-                         v1 to v2 in the copy.
-                         Go to plugin.configuration.webResources.resource.includes in this pom.xml and extend the list
-                         with v2 versions of the JSON & YAML files.
-
-                         Also remember to:
-                         * Create dk.kb.discover.webservice.Application_v2
-                         * Create src/main/openapi/openapi_v2.yaml
-                         * Update src/main/webapp/WEB-INF/web.xml
-                         * Update src/main/webapp/api/index.html
-                    -->
-
-                    <execution>
-                        <!-- Generate API file from the OpenAPI specification (positioned under the target/generated-sources/ folder).
-                             These files are overwritten on all builds, so they should never be edited manually. -->
-                        <id>v1: Generate api classes</id>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <inputSpec>${project.build.outputDirectory}/ds-discover-openapi_v1.yaml</inputSpec>
-                            <ignoreFileOverride>
-                                ${project.basedir}/.openapi-codegen-ignore-api
-                            </ignoreFileOverride>
-
-                            <configOptions>
-                                <apiPackage>${project.package}.api.v1</apiPackage>
-                                <modelPackage>${project.package}.model.v1</modelPackage>
-                                <!-- Setting this to true overwrites existing implementations.
-                                     Only set it temporarily when creating a new project -->
-                                <generateOperationBody>false</generateOperationBody>
-                                <sourceFolder>target/generated-sources</sourceFolder>
-                            </configOptions>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <!-- The purpose is to generate skeleton implementation classes, if such classes are not already existing.
-                         Since we always want to overwrite existing api & model-files when the OpenAPI specification is changed,
-                         but never want to overwrite existing implementation-files, we need to do the generation in 2 steps. -->
-                        <id>v1: Generate skeleton impl</id>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <inputSpec>${project.build.outputDirectory}/ds-discover-openapi_v1.yaml</inputSpec>
-                            <ignoreFileOverride>${project.basedir}/.openapi-codegen-ignore-impl</ignoreFileOverride>
-
-                            <configOptions>
-                                <apiPackage>${project.package}.api.v1</apiPackage>
-                                <modelPackage>${project.package}.model.v1</modelPackage>
-                                <implPackage>${project.package}.v1.impl</implPackage>
-                                <generateOperationBody>true</generateOperationBody>
-                            </configOptions>
-                            <skipOverwrite>true</skipOverwrite>
-                        </configuration>
-                    </execution>
-
-                </executions>
-            </plugin>
-
-            <!-- The generated classes for the OpenAPI client are problematic. Disable checking of those for now -->
-            <plugin>
-                <groupId>de.thetaphi</groupId>
-                <artifactId>forbiddenapis</artifactId>
-                <!-- No version or configuration here as it inherits from parent pom -->
-                <configuration>
-                    <excludes>
-                        <exclude>**/DsDiscoverApi.class</exclude>
-                        <exclude>**/ServiceApi.class</exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <configuration>
-                    <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
-                    <archive>
-                        <manifest>
-                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                        </manifest>
-                    </archive>
-
-                    <!-- Generate a JAR with client classes and openapi-YAML for easy use by other services -->
-                    <attachClasses>true</attachClasses>
-
-                    <!--Enable maven filtering for the web.xml-->
-                    <filteringDeploymentDescriptors>true</filteringDeploymentDescriptors>
-                    <webResources>
-                        <webResource> <!-- Store application name, version and build time -->
-                            <directory>${basedir}/src/main/resources/</directory>
-                            <includes>
-                                <include>ds-discover.build.properties</include>
-                            </includes>
-                            <filtering>true</filtering>
-                        </webResource>
-                        <resource>
-                            <!--Include the openapi spec files so we can serve them-->
-                            <directory>${project.build.outputDirectory}</directory>
-                            <targetPath>.</targetPath>
-                            <includes>
-                                <include>ds-discover-openapi_v1.json</include>
-                                <include>ds-discover-openapi_v1.yaml</include>
-                            </includes>
-                        </resource>
-                    </webResources>
-                </configuration>
-            </plugin>
-
-
-            <!-- Used only for mvn jetty:run jetty:run-war -->
-            <plugin>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-                <version>10.0.12</version>
-                <configuration>
-                    <deployMode>FORK</deployMode>
-                    <jvmArgs>-Xmx256m  -Djetty.port=9074</jvmArgs>
-                    <jettyXmls>${project.basedir}/target/jetty-res/jetty-env.xml</jettyXmls>
-                    <useTestScope>true</useTestScope>
-                    <!-- https://www.eclipse.org/jetty/documentation/jetty-10/programming-guide/index.html#jetty-run-goal -->
-                    <!-- https://stackoverflow.com/questions/12493798/jetty-maven-plugin-using-scan -->
-                    <scan>2</scan>
-                    <webApp>
-                        <contextPath>/${project.artifactId}/</contextPath>
-                        <descriptor>${project.basedir}/target/${project.build.finalName}/WEB-INF/web.xml</descriptor>
-                        <jettyEnvXml>${project.basedir}/target/jetty-res/jetty-env.xml</jettyEnvXml>
-                    </webApp>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.6.0</version>
-                <configuration>
-                    <tarLongFileMode>posix</tarLongFileMode>
-                    <descriptors>
-                        <descriptor>src/main/assembly/assembly.xml</descriptor>
-                    </descriptors>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                        <phase>package</phase>
-                    </execution>
-                </executions>
-            </plugin>
             <!-- Plugin used to extract information on the current git setup.
      See: https://github.com/git-commit-id/git-commit-id-maven-plugin -->
             <plugin>
