DRA-2075 Use DsPresentClient to call transformSolrSchema endpoint in ds-present

--- a/conf/ds-discover-behaviour.yaml
+++ b/conf/ds-discover-behaviour.yaml
@@ -125,4 +125,5 @@ security:
     # This typically used for calls between services, where there is a need for elevated access.
     secret: '01234567-89ab-cdef-0123-456789abcdef'
    
-
+present:
+  url: http://localhost:9073/ds-present/v1
